--- a/kalkulator.html
+++ b/kalkulator.html
@@ -215,7 +215,7 @@ HEADER
 WSTĘP
 Obliczanie pierwiastkow SECTION
 ============================== -->
-    <section class="app-brief deep-dark-bg change-dot" id="znajdz_pierwiastki">
+    <section class="app-brief dark-bg change-dot" id="znajdz_pierwiastki">
 
         <h2 class="white-text ">Obliczanie pierwiastków wielomianu.</h2>
         <p class="white-text padding"> Podaj współczynniki wielomianu (maksymalnie 3-stopnia), wciśnij "rozwiąż" po wpisaniu.</p>
@@ -310,7 +310,7 @@ x+
     </section>
 
 <!-- ZMIEN SYSTEM LICZBOWY SECTION -->
-<section class="app-brief dark-bg change-dot" id="zmien_system">
+<section class="app-brief deep-dark-bg change-dot" id="zmien_system">
     <div align="center">
         <form name="frmhorner" class="center-block">
             <h2 id="data_out" class="white-text">
@@ -376,6 +376,29 @@ x+
     </div>
 
 </section>
+
+<!-- =========================
+     FOOTER
+============================== -->
+<footer class="dark-bg end">
+<img class="footer" src="images/footer.svg">
+<div class="container">
+
+
+	<!-- LOGO -->
+	<img src="images/logo.png" alt="LOGO" class="responsive-img">
+
+	<!-- COPYRIGHT TEXT -->
+	<p class="copyright" >
+		©2015 Kamil Best, kamil.besst@gmail.com
+	</p>
+
+</div>
+<!-- /END CONTAINER -->
+
+</footer>
+<!-- /END FOOTER -->
+
 <!-- /END SECTION -->
 <a href="#home" class="cd-top">Top</a>
 
