Finished competition version.

--- a/index.html
+++ b/index.html
@@ -789,9 +789,9 @@ n - stopień wielomianu,</br>
     <li>    Resztę komórek dolnego wiersza uzupełniamy wykonując obliczenia.</li>
 </ul>
 </br>
-                <p>Filmik instruktażowy wypełniania tabelki:</p>
+                <p>Film instruktażowy wypełniania tabelki:</p>
 				<div class="video">
-                <iframe width="560" height="315" src="//www.youtube.com/embed/llHOtLxsTzI" frameborder="0" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="http://www.youtube.com/embed/llHOtLxsTzI" frameborder="0" allowfullscreen></iframe>
 </div>
                 <p>(Film stworzony przez InfoPlus. Umieszczony na podstawie standardowej licencji YouTube).</p>
 <div class="colored-line-left margin-top yellow">
