--- a/index.html
+++ b/index.html
@@ -655,7 +655,7 @@ DIVISION THEOREM
                     <h3 class="green-text"></br>Twierdzenie o liczbie pierwiastków wielomianu</h3>
 
                 <p>
-                    Liczba pierwiastków niezerowego wielomianu <span class="math_marks">W(x)</span> jednej zmiennej rzeczywistej jest nie większe niż stopień wielomianu <span class="math_marks">W(x).</span></p>
+                    Liczba pierwiastków niezerowego wielomianu <span class="math_marks">W(x)</span> jednej zmiennej rzeczywistej jest nie większa niż stopień wielomianu <span class="math_marks">W(x).</span></p>
             </div>
 
             <div class="colored-line-left margin-top yellow">
