--- a/info.html
+++ b/info.html
@@ -236,7 +236,7 @@ HEADER
 
         <h2 class="white-text ">O mnie.</h2>
                         <img src="images/about_me.svg">
-     <p>Nazywam się Kamil Best, mam 18 lat i jestem uczniem 3 klasy o profilu informatyczno-matematycznym w Liceum Ogólnokształcącym im. Jana Kochanowskiego w Olecku.</p>
+     <p>Nazywam się Kamil Best, mam 18 lat i jestem uczniem 3 klasy o profilu informatyczno-matematycznym w I Liceum Ogólnokształcącym im. Jana Kochanowskiego w Olecku.</p>
 
 
 
@@ -252,13 +252,14 @@ HEADER
                         <p>Dzięki tej stronie dowiesz się, do czego służy schemat Hornera oraz jak go stosować. Podjąłem się robienia strony o tym algorytmie, ponieważ zaciekawił mnie pełen wachlarz zastosowania go w wielu różnych przypadkach w matematyce oraz informatyce. Myślę, że udało mi się opisać wszystko zrozumiale.</p>
                         <img src="images/about_website.svg">
                           <h2 class="white-text ">Zalety strony:</h2>
-                        <ul>
+                        <ul style="list-style-type:disc">
                         <li>Łatwa nawigacja - sam wybierz w jaki sposób chcesz się poruszać po stronie. Klikając, scrollując czy przesuwając strzałką. Menu na górze pozwoli Ci znaleźć zagadnienie, którego szukasz, a menu po prawej ułatwi zorientowanie się na stronie, dzięki czemu ciężej jest się zgubić.
 
                             </li>
                             <li>Responsywność - strona działa na wszystkich urządzeniach.
                             </li>
-                        <li>Kompatybilność z przeglądarkami.</li>
+                        <li>Kompatybilność z wszystkimi przeglądarkami.</li>
+                        <li>Nowoczesny design.</li>
                         </ul>
 
 
@@ -275,12 +276,12 @@ SECTION
                     <div class="col-md-12 left-align wow fadeInLeft animated" data-wow-offset="10" data-wow-duration="1.5s">
 
         <h2 class="white-text ">Bibliografia.</h2>
-      <ul>KSIĄŻKI:
-          <li>Ryszard Kalina, Tadeusz Szymański, Feliks Linke <i>Matematyka dla kl.I liceum i technikum. Zakres podstawowy i rozszerzony.</i></li>
-          <li>Marcin Kurczab, Elżbieta Kurczab, Elżbieta Świda <i>Matematyka podręcznik do liceów i techników klasa 2.</i></li>
+      <ul style="list-style-type:disc">
+          <li>Ryszard Kalina, Tadeusz Szymański, Feliks Linke: <span class="coursive">Matematyka dla kl.I liceum i technikum. Zakres podstawowy i rozszerzony.</span></li>
+          <li>Marcin Kurczab, Elżbieta Kurczab, Elżbieta Świda: <span class="coursive">Matematyka podręcznik do liceów i techników klasa 2. Zakres rozszerzony.</span></li>
                         </br>
           BIOGRAFIA:
-                        <li>Informacje o autorze Williamie Georg'u Hornerze: <a href="http://pl.wikipedia.org/wiki/William_George_Horner">Wikipedia</a></li>
+                        <li>Informacje o autorze Williamie Georg'u Hornerze: <a href="http://pl.wikipedia.org/wiki/William_George_Horner">Wikipedia.</a></li>
           </br>
                         GRAFIKI (licencje do projektów niekomercyjnych):
                         <li>Darmowe grafiki wektorowe: <a href="http://www.freepik.com/">Freepik.</a></li>
@@ -296,7 +297,7 @@ SECTION
                     <div class="col-md-12 left-align wow fadeInLeft animated" data-wow-offset="10" data-wow-duration="1.5s">
 
         <h2 class="white-text ">Użyte programy:</h2>
-      <ul>
+      <ul style="list-style-type:disc">
           <li>System operacyjny <a href="http://www.ubuntu.com/">Ubuntu 14.10.</a></li>
           <li>Edytor html/css/js: <a href="http://brackets.io/">Brackets.</a></li>
           <li>Obróbka grafiki rastrowej: <a href="http://www.gimp.org/">GIMP.</a></li>
